# layeredgraphics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  prepare-release.yml  publish-release.yml
apps/site/: astro.config.mjs  package.json  playwright.config.ts
apps/site/public/: api-equivalence.ops.json  readme-banner.kgfx  showcase.kgfx
apps/site/scripts/: serve.mjs
apps/site/src/content/docs/docs/: browser.md  cli.md  index.md
apps/site/src/content/docs/docs/concepts/: documents.md
apps/site/src/content/docs/docs/project/: audit.md  benchmarks.md  releasing.md  roadmap.md  support.md  technology.md
apps/site/src/pages/: index.astro  playground.astro
apps/site/src/styles/: global.css
apps/site/src/workers/: render.worker.ts
apps/site/tests/: browser-smoke.spec.ts
benchmarks/: budgets.json  results-browser-chromium149.json  results-linux-ryzen7900x.json
crates/lg-cli/: Cargo.toml  README.md
crates/lg-cli/src/: main.rs
crates/lg-cli/tests/: cli.rs
crates/lg-core/: Cargo.toml  README.md
crates/lg-core/examples/: phase_baselines.rs
crates/lg-core/src/: command.rs  container.rs  document.rs  history.rs  inspection.rs  lib.rs  render.rs  schema.rs
crates/lg-core/tests/: contracts.rs
crates/lg-node/: Cargo.toml
crates/lg-node/src/: lib.rs
crates/lg-wasm/: Cargo.toml
crates/lg-wasm/src/: lib.rs
docs/: API_SUPPORT.md  BENCHMARKS.md  BROWSER_RENDERING.md  FOUNDATION_AUDIT.md  MILESTONE_1.md  MILESTONE_2.md  PHASES_1_2_AUDIT.md  RELEASING.md  ROADMAP.md  TECH_STACK.md
docs/plans/: 01-executable-document.md  02-browser-rendering.md  03-graphics-primitives.md  04-editor-toolkit.md  05-integration-hardening.md  06-website-documentation.md
docs/spec/: commands-v1.md  kgfx-v1.md
examples/readme-banner/: README.md  accents.ops.json  banner.sha256  build.sh
examples/readme-banner/assets/: layered.lgf
examples/showcase/: README.md  build.sh
examples/showcase/assets/: PROVENANCE.md
fixtures/conformance/: preview-tolerances.json
fixtures/migrations/: v0-manifest.json
scripts/: build-wasm.sh  check-benchmarks.mjs  generate-schemas.sh  prepare-release.mjs  run-benchmarks.sh
spec/commands/: v1.schema.json
spec/document/: v1.schema.json
