[workspace]
resolver = "2"
members = [
  "crates/lg-core",
  "crates/lg-cli",
  "crates/lg-node",
  "crates/lg-wasm",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/iamkaf/layeredgraphics"

[workspace.dependencies]
anyhow = "1.0"
atomic-write-file = "0.3"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jsonschema = { version = "0.47", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"
sha2 = "0.11"
thiserror = "2.0"
tiny-skia = "0.11"
uuid = { version = "1.11", features = ["v4", "js"] }
wasm-bindgen = "0.2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
napi = { version = "3.10", default-features = false, features = ["napi8"] }
napi-derive = "3.5"
napi-build = "2.3"
naga = { version = "30.0.0", features = ["wgsl-in"] }
