[package]
name = "lg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
lg-core = { path = "../lg-core" }
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
image.workspace = true
predicates = "3.1"
tempfile = "3.14"
