[package]
name = "lg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native command-line authoring interface for Layered Graphics documents"

[[bin]]
name = "lg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
lg-core = { version = "0.1.0-alpha.1", path = "../lg-core" }
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
image.workspace = true
predicates = "3.1"
tempfile = "3.14"
