[package]
name = "lg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
fontdue.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiny-skia.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3.14"
naga.workspace = true
jsonschema.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atomic-write-file.workspace = true
