[package]
name = "lg-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the Layered Graphics engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
lg-core = { version = "0.1.0-alpha.1", path = "../lg-core" }
serde_json.workspace = true
wasm-bindgen.workspace = true
